--- a/package.json
+++ b/package.json
@@ -3,13 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react": "^16.7.13",
+    "@types/react-bootstrap": "^0.32.15",
+    "@types/react-router-dom": "^4.3.1",
     "firebase": "^5.5.3",
+    "firebase-admin": "^7.2.0",
+    "firebase-functions": "^2.2.1",
+    "firebaseui": "^3.4.1",
     "react": "^16.5.2",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.5.2",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.4"
+    "react-scripts": "^2.1.8"
   },
   "scripts": {
     "start": "react-scripts start",
